# reelbit

./: Anchor.toml  Cargo.toml  package-lock.json  package.json  render.yaml  turbo.json
apps/api/: .env.example  package.json
apps/api/src/: balanceStore.ts  config.ts  decoder.ts  demoStore.ts  distributionCron.ts  dividendStore.ts  fakeBots.ts  holderDividendCron.ts  houseWallet.ts  imageGen.ts  index.ts  jupiterSwap.ts  lpHarvestCron.ts  mcapWatcher.ts  migration.ts  priceHistoryStore.ts  profileStore.ts  pythPrice.ts  slotTheme.ts  supabase.ts  themeStore.ts  types.ts
apps/casino/: .env.example  next.config.js  package.json  tsconfig.tsbuildinfo  vercel.json
apps/casino/app/: globals.css  layout.tsx  page.tsx
apps/casino/components/: ReelBitCalculator.tsx
apps/casino/lib/: balanceClient.ts  demoSession.ts  gameClient.ts  profileClient.ts  slotTheme.ts  utils.ts
apps/fun/: .env.example  .gitignore  package.json  tailwind.config.ts  vercel.json
apps/fun/app/: globals.css  layout.tsx  page.tsx
apps/fun/lib/: anchor.ts  constants.ts  privy.ts  tokenLaunch.ts  utils.ts
apps/fun/types/: slot.ts
apps/game-server/: package.json
programs/casino-grr-vault/: Cargo.toml
programs/casino-grr-vault/src/: lib.rs
programs/distribution/: Cargo.toml
programs/graduation-detector/: Cargo.toml
programs/harvester/: Cargo.toml
programs/jackpot-pool/: Cargo.toml
programs/jackpot-pool/src/: lib.rs
programs/legal-reserve/: Cargo.toml
programs/legal-reserve/src/: lib.rs
programs/lp-vault/: Cargo.toml
programs/shareholder-pool/: Cargo.toml
programs/token-launch/: Cargo.toml
programs/token-launch/src/: lib.rs
src/components/: SlotDemoSection.tsx  WaitlistSection.tsx
src/pages/: ConfirmPage.tsx
(+47 files in other folders)
