[package]
name = "token-launch"
version = "0.1.0"
description = "ReelBit Token Launch Program — creates SPL token, seeds Meteora DLMM pool, enforces 5% wallet cap"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_launch"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.0", features = ["token", "associated_token"] }
